update de arquivos

--- a/Portal_de_noticias/index.html
+++ b/Portal_de_noticias/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Meu Portal de Notícias</h1>
+            <h1>Portal de noticias dos guri</h1>
             <nav>
                 <ul>
                     <li>
@@ -37,7 +37,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
                     Nunc mattis gravida hendrerit. 
-                    <a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                    <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
                 </p>
             </article>
             <article>
@@ -49,7 +49,7 @@
             <p>
                 Proin vel leo id neque finibus mattis. Suspendisse sit amet dui laoreet, consequat dui in, dictum ante. Fusce vestibulum accumsan scelerisque. 
                 Pellentesque feugiat leo massa, quis semper mi condimentum vel. 
-                <a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
             </p>
         </article>
         <article>
@@ -61,7 +61,7 @@
         <p>
             Praesent id lacus et libero tempus luctus. Ut nec libero tincidunt, auctor elit ut, dapibus nibh. Suspendisse potenti. Praesent in lorem felis. 
             Sed ut ex id sem facilisis consectetur. 
-            <a href="#" title="Leia a notícia completa">Saiba Mais</a>
+            <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
         </p>
     </article>
             </div>
@@ -81,7 +81,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
                     Nunc mattis gravida hendrerit. 
-                    <a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                    <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
                 </p>
             </article>
             <article>
@@ -105,7 +105,7 @@
         <p>
             Praesent id lacus et libero tempus luctus. Ut nec libero tincidunt, auctor elit ut, dapibus nibh. Suspendisse potenti. Praesent in lorem felis. 
             Sed ut ex id sem facilisis consectetur. 
-            <a href="#" title="Leia a notícia completa">Saiba Mais</a>
+            <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
         </p>
     </article>
             </div>
