--- a/Portal_de_noticias/index.html
+++ b/Portal_de_noticias/index.html
@@ -19,6 +19,12 @@
                     <li>
                         <a href="#economy" title="Ir para economia">Economia</a>
                     </li>
+                    <li>
+                        <a href="#games" title="Ir para games">Games</a>
+                    </li>
+                    <li>
+                        <a href="#animes" title="Ir para animes">Animes</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -89,7 +95,7 @@
             <header>
                 <time class="creation-date">25/04/23 às 16h</time>
             </header>
-            <h3>Queda da bolsa</h3>
+            <h3>Queda do Euro</h3>
             <p>
                 Proin vel leo id neque finibus mattis. Suspendisse sit amet dui laoreet, consequat dui in, dictum ante. Fusce vestibulum accumsan scelerisque. 
                 Pellentesque feugiat leo massa, quis semper mi condimentum vel. 
@@ -101,7 +107,7 @@
         <header>
             <time class="creation-date">25/04/23 às 16h</time>
         </header>
-        <h3>Novo trilionário</h3>
+        <h3>Super valorização do Yen</h3>
         <p>
             Praesent id lacus et libero tempus luctus. Ut nec libero tincidunt, auctor elit ut, dapibus nibh. Suspendisse potenti. Praesent in lorem felis. 
             Sed ut ex id sem facilisis consectetur. 
@@ -110,6 +116,96 @@
     </article>
             </div>
         </div>
+                    <section id="games">
+                        <div class="container">
+                            <h2>Games</h2>
+                            <div class="articles">
+                                <article>
+                                    <img src="/Midias/Dragon ball 2.png" alt="Dragon ball">
+                                <header>
+                                    <time class="creation-date">26/04/23 às 16h</time>
+                                </header>
+                                <h3>Dragon Ball Xenoverse 2 alcança 9 milhões de cópias vendidas!</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                    Nunc mattis gravida hendrerit. 
+                                    <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                </p>
+                            </article>
+                            <article>
+                                <article>
+                                    <img src="/Midias/HKSR_KV_EN.png" alt="Honkai">
+                                <header>
+                                    <time class="creation-date">26/04/23 às 16h</time>
+                                </header>
+                                <h3>Honkai Star Rail ja esta disponivel globalmente</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                    Nunc mattis gravida hendrerit. 
+                                    <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                </p>
+                            </article>
+                            <article>
+                            </article>
+                            <article>
+                                <article>
+                                    <img src="/Midias/Fort.png" alt="Fort">
+                                <header>
+                                    <time class="creation-date">26/04/23 às 16h</time>
+                                </header>
+                                <h3>Fortnite tem queda de jogadores</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                    Nunc mattis gravida hendrerit. 
+                                    <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                </p>
+                            </article>
+                            <article>
+                                <section id="animes">
+                                    <div class="container">
+                                        <h2>Animes</h2>
+                                        <div class="articles">
+                                            <article>
+                                                <img src="/Midias/Oshi-no-Ko-n-jnjnjnnjn.png" alt="oshinooko">
+                                            <header>
+                                                <time class="creation-date">26/04/23 às 16h</time>
+                                            </header>
+                                            <h3>Oshi No Oko esta em primeiro lugar de animes mais assistidos da temporada</h3>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                                Nunc mattis gravida hendrerit. 
+                                                <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                            </p>
+                                        </article>
+                                        <article>
+                                            <article>
+                                                <img src="/Midias/knytemp3.png" alt="kny">
+                                            <header>
+                                                <time class="creation-date">26/04/23 às 16h</time>
+                                            </header>
+                                            <h3>Kimetsu no Yaiba/Demon Slayer ja iniciou sua terceira temporada</h3>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                                Nunc mattis gravida hendrerit. 
+                                                <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                            </p>
+                                        </article>
+                                        <article>
+                                        </article>
+                                        <article>
+                                            <article>
+                                                <img src="/Midias/genshin-impact-anime.png" alt="genshin">
+                                            <header>
+                                                <time class="creation-date">26/04/23 às 16h</time>
+                                            </header>
+                                            <h3>Ainda sem data de estreia para o anime de Genshin Impact</h3>
+                                            <p>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non commodo mi. Ut bibendum orci in augue tempor, in fermentum sem suscipit. 
+                                                Nunc mattis gravida hendrerit. 
+                                                <br><a href="#" title="Leia a notícia completa">Saiba Mais</a>
+                                            </p>
+                                        </article>
+                                        <article>
         
     </section>
 </body>
