--- a/Portal_de_noticias/index.html
+++ b/Portal_de_noticias/index.html
@@ -206,7 +206,7 @@
                                             </p>
                                         </article>
                                         <article>
-        
-    </section>
+                                    </div>
+                                </section>
 </body>
 </html>
