--- a/Portal_de_noticias/index.html
+++ b/Portal_de_noticias/index.html
@@ -147,7 +147,6 @@
                             </article>
                             <article>
                             </article>
-                            <article>
                                 <article>
                                     <img src="/Midias/Fort.png" alt="Fort">
                                 <header>
@@ -179,6 +178,7 @@
                                         </article>
                                         <article>
                                             <article>
+                                                <div class="articles"></div>
                                                 <img src="/Midias/knytemp3.png" alt="kny">
                                             <header>
                                                 <time class="creation-date">26/04/23 às 16h</time>
@@ -194,6 +194,7 @@
                                         </article>
                                         <article>
                                             <article>
+                                                <div class="articles"></div>
                                                 <img src="/Midias/genshin-impact-anime.png" alt="genshin">
                                             <header>
                                                 <time class="creation-date">26/04/23 às 16h</time>
