--- a/exercicios/Site_dos_guri/index.html
+++ b/exercicios/Site_dos_guri/index.html
@@ -76,6 +76,7 @@
             <button type="submit">Enviar</button>
         </form>
 </div>
+<section>
         <div>
             <h3>Nos acompanhe</h3>
             <ul class="social-links">
@@ -96,6 +97,7 @@
                 </li>
             </ul>
         </div>
+    </section>
     <div>
         <h3>Venha até nós</h3>
         <p>
