--- a/Site_Genshin/genshin.html
+++ b/Site_Genshin/genshin.html
@@ -16,7 +16,9 @@
         <section id="about">
             <div class="container">
                 <div>
-                    <img src="/Midias/anniversary-nahida-venti-raiden-zhongli-official-desktop-wallpaper-genshin.jpg" alt="logo"/>
+                    <img src="/Midias/anniversary-nahida-venti-raiden-zhongli-official-desktop-wallpaper-genshin.jpg" alt="logo"
+                    width="85%" height="100%"/>
+
                     <h2>Sobre o site</h2>
                     <h2>Seja muito bem vindo caro(a) viajante. Aqui vamos falar sobre alguns personagens.
                         Vamos falar sobre suas habilidades,talentos e vamos dar algumas dicas tambem.
@@ -54,10 +56,24 @@
                     <li>
                         <a href="./zhongli.html" title="zhongli">Zhongli</a>
                     </li>
+                    <li>
+                        <a href="./venti.html" title="venti">Venti</a>
+                    </li>
+                    <li>
+                        <a href="./xingqiu.html" title="xingqiu">Xingqiu</a>
+                    </li>
+                    <li>
+                        <a href="./klee.html" title="klee">Klee</a>
+                    </li>
+                    <li>
+                        <a href="./diluc.html" title="diluc">Diluc</a>
+                    </li>
                 </footer>
                 </ul>
             </nav>
         </h3>
+                </div>
+                </div>
 
 </body>
 </html>
