--- a/agenda/index.html
+++ b/agenda/index.html
@@ -10,35 +10,36 @@
         <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./main.css"/>
         
-        <title>Agenda</title>
+        <title>Sistema de Contatos</title>
     </head>
     <body>
         <div class="container">
             <header>
                 <img src="/Midias/Agenda.png" alt="Agenda"/>
-                <H1>Contatos</H1>
+                <H1>Lista de Contatos</H1>
             </header>
             <form id="form_contato">
-                <input type = "text" id="nome_atividade" placeholder="Nome do contato"/>
-                <input type = "number" id="nota_atividade" required placeholder="Num" min="0" max="10"/>
-                <button type="submit">Adicionar +</button>
+                <input type="text" id="nome_contato" placeholder="Nome do contato" required />
+                <input type="text" id="email_contato" placeholder="E-mail do contato" required />
+                <input type="text" id="telefone_contato" placeholder="Telefone do contato" required />
+                <button type="submit">Adicionar Contato</button>
             </form>
             <table cellspacing="0">
                 <thead>
                     <tr>
                         <th>
-                            Nome do contato:
+                            Nome
                         </th>
                         <th>
-                            Número:
+                            E-mail
                         </th>
                         <th>
-                            Aprovado?
+                            Telefone
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Linhas construidas pelo main.js -->
+                    <!-- Linhas construídas pelo main.js -->
                 </tbody>
             </table>
         </div>
