--- a/Projeto_2/index.html
+++ b/Projeto_2/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="container">
             <header>
-                <img src="/agenda/agenda.png" alt="agenda"/>
+                <img src="/Projeto_2/agenda copy.png" alt="Agenda"/>
                 <H1>Lista de Contatos</H1>
             </header>
             <form id="form_contato">
