--- a/Site_Honkai/login.html
+++ b/Site_Honkai/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Sistema de Cadastro e Login</h1>
+    <h1>Cadastro e Login</h1>
     <div id="register-form">
       <h2>Cadastre-se</h2>
       <div id="register-msg"></div>
