--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -16,7 +16,7 @@
     <h2>Sobre</h2>
     <p>
         Seje bem-vindo ao Expresso Astral,aqui você podera saber detalhes de 
-        personagens,materiais que precisa para elevar os personagens
+        personagens,materiais que precisa para eleva-los
         e mais alguns detalhes.
     </p>
     <table class="article-table sortable jquery-tablesorter" style="width:100%">
@@ -286,8 +286,8 @@
         </td></tr></tbody><tfoot></tfoot></table>
     </section>
     <section>
-        <h2>Personagens que ainda serão lançados</h2>
-        <p>Em algum momento a Hoyoverse planeja lançar eles</p>
+        <h2>Personagens que ainda serão lançados:</h2>
+        <p>Em algum momento a Hoyoverse planeja lançar eles.</p>
     </section>
     <div>
         <section>
@@ -336,7 +336,40 @@
             </td>
             <td><span style="white-space:nowrap;"><a href="/wiki/Lightning" title="Lightning"><img alt="Element Lightning" src="/Site_Honkai/Art_splash/Element_Lightning.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Lightning.png" data-image-key="Element_Lightning.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/70/Element_Lightning.png/revision/latest/scale-to-width-down/20?cb=20220610120329" class=" ls-is-cached lazyloaded"></a> <span class="text-lightning"><b>Trovão</b></span></span>
             </td></tr>
-            <tr>
+                <tr>
+                    <td><a href="/wiki/Luocha" title="Luocha"><img alt="Character Luocha Icon" src="/Site_Honkai/Art_splash/Character_Luocha_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Luocha Icon.png" data-image-key="Character_Luocha_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/5/57/Character_Luocha_Icon.png/revision/latest/scale-to-width-down/40?cb=20230326051424" class=" lazyloaded"></a>
+                    </td>
+                    <td><a href="/wiki/Luocha" title="Luocha">Luocha</a>
+                    </td>
+                    <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦ ✦</span>
+                    </td>
+                    <td><span style="white-space:nowrap;"><a href="/wiki/Abundance" title="The Abundance"><img alt="Path The Abundance" src="/Site_Honkai/Art_splash/Path_The_Abundance.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Abundance.png" data-image-key="Path_The_Abundance.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1c/Path_The_Abundance.png/revision/latest/scale-to-width-down/20?cb=20230511094214" class=" ls-is-cached lazyloaded"></a> <a href="/wiki/The_Abundance" title="The Abundance">A Abundância</a></span>
+                    </td>
+                    <td><span style="white-space:nowrap;"><a href="/wiki/Imaginary" title="Imaginary"><img alt="Element Imaginary" src="/Site_Honkai/Art_splash/Element_Imaginary.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Imaginary.png" data-image-key="Element_Imaginary.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/70/Element_Imaginary.png/revision/latest/scale-to-width-down/20?cb=20220610120329" class=" ls-is-cached lazyloaded"></a> <span class="text-imaginary"><b>Imaginario</b></span></span>
+                    </td></tr>
+                    <tr>
+                        <tr>
+                            <td><a href="/wiki/Silver" title="Silver"><img alt="Character Silver Icon" src="/Site_Honkai/Art_splash/Character_Silver_Wolf_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Silver Icon.png" data-image-key="Character_Silver_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/5/57/Character_Silver_Icon.png/revision/latest/scale-to-width-down/40?cb=20230326051424" class=" lazyloaded"></a>
+                            </td>
+                            <td><a href="/wiki/Silver" title="Silver">Silver Wolf</a>
+                            </td>
+                            <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦ ✦</span>
+                            </td>
+                            <td><span style="white-space:nowrap;"><a href="/wiki/Nihility" title="The Nihility"><img alt="Path The Nihility" src="/Site_Honkai/Art_splash/Path_The_Nihility.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Nihility.png" data-image-key="Path_The_Nihility.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1c/Path_The_Nihility.png/revision/latest/scale-to-width-down/20?cb=20230511094214" class=" ls-is-cached lazyloaded"></a> <a href="/wiki/The_Nihility" title="The Nihility">A Nihilidade</a></span>
+                            </td>
+                            <td><span style="white-space:nowrap;"><a href="/wiki/Quantum" title="Quantum"><img alt="Element Quantum" src="/Site_Honkai/Art_splash/Element_Quantum.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Lightning.png" data-image-key="Element_Lightning.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/70/Element_Quantum.png/revision/latest/scale-to-width-down/20?cb=20220610120329" class=" ls-is-cached lazyloaded"></a> <span class="text-quantum"><b>Quântico</b></span></span>
+                            </td></tr>
+                            <tr>
+                                <td><a href="/wiki/Yukong" title="Yukong"><img alt="Character Yukong Icon" src="/Site_Honkai/Art_splash/Character_Yukong_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Silver Icon.png" data-image-key="Character_Silver_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/5/57/Character_Silver_Icon.png/revision/latest/scale-to-width-down/40?cb=20230326051424" class=" lazyloaded"></a>
+                                </td>
+                                <td><a href="/wiki/Yukong" title="Yukong">Yukong</a>
+                                </td>
+                                <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦</span>
+                                </td>
+                                <td><span style="white-space:nowrap;"><a href="/wiki/Harmony" title="The Harmony"><img alt="Path The Harmony" src="/Site_Honkai/Art_splash/Path_The_Harmony.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The The_Harmony.png" data-image-key="Path_The_Harmony.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1c/Path_The_Harmony.png/revision/latest/scale-to-width-down/20?cb=20230511094214" class=" ls-is-cached lazyloaded"></a> <a href="/wiki/The_Harmony" title="The Nihility">A Harmonia</a></span>
+                                </td>
+                                <td><span style="white-space:nowrap;"><a href="/wiki/Imaginary" title="Imaginary"><img alt="Element Imaginary" src="/Site_Honkai/Art_splash/Element_Imaginary.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Imaginary.png" data-image-key="Element_Imaginary.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/7/70/Element_Imaginary.png/revision/latest/scale-to-width-down/20?cb=20220610120329" class=" ls-is-cached lazyloaded"></a> <span class="text-imaginary"><b>Imaginario</b></span></span>
+                                </td></tr>
             </td></tr></tbody><tfoot></tfoot></table>
         </section>
     </div>
