--- a/Site_Honkai/caminhos/preservacao.html
+++ b/Site_Honkai/caminhos/preservacao.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="caminhos .css">
-    <title>A Preservação</title>
-
+<title>A Preservação</title>
+<link rel="stylesheet" type="text/css" href="caminhos.css">
 </head>
+<body>
+<header>
+    <h1>A Preservação</h1>
+</li>
+<section>
+    <h2>Sobre este caminho:</h2>
+    <p>
+    </p>
+    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Preservação" admiram a paciência, o sacrifício e o comportamento defensivo.
+    </font></font></i></div></div>
+    <table class="article-table sortable jquery-tablesorter" style="width:100%">
+        <thead><tr>
+        </th></tr></thead><tbody>
+        <tr>
+        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Preservation.webp" class=" lazyloaded"></span>
+        </td>
+    </td></tr></tbody><tfoot></tfoot></table>
+</section>
+<section>
+    <h2>Descrição:</h2>
+        <section>
+        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">“O filósofo contempla as estrelas tentando encontrar o objetivo final da civilização – 'Construir um muro.' </font><font style="vertical-align: inherit;">Uma voz majestosa ecoou em sua cabeça. 'Construa uma parede.'" </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Fables About the Stars de Adrian Spencer Smith </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O construtor da Celestial Comet Wall, da Subspace Crystalline Barrier e da Great Attractor Base. </font><font style="vertical-align: inherit;">Os seguidores os chamam de "Lorde Âmbar", um dos Aeons mais antigos e tenazes, tendo sobrevivido às "Guerras do Crepúsculo". </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Depois de descobrir que uma ameaça era iminente, o Amber Lord forjou um poderoso selo de anos-luz que isolaria e protegeria os mundos vivos.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div></div>
+        </section>
+    </head>
 <body>
     
 </body>
