--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -125,15 +125,15 @@
     </font></font></p>
     <table class="article-table sortable jquery-tablesorter" style="width:100%">
         <thead><tr>
-        <th class="headerSort" tabindex="0" role="columnheader button" title="Sort ascending">Icone
+        <th class="headerSort" tabindex="0" role="columnheader button">Icone
         </th>
-        <th class="headerSort" tabindex="0" role="columnheader button" title="Sort ascending">Nome
+        <th class="headerSort" tabindex="0" role="columnheader button">Nome
         </th>
-        <th class="headerSort" tabindex="0" role="columnheader button" title="Sort ascending">Raridade
+        <th class="headerSort" tabindex="0" role="columnheader button">Raridade
         </th>
-        <th class="headerSort" tabindex="0" role="columnheader button" title="Sort ascending">Caminho
+        <th class="headerSort" tabindex="0" role="columnheader button">Caminho
         </th>
-        <th class="headerSort" tabindex="0" role="columnheader button" title="Sort ascending">Elemento
+        <th class="headerSort" tabindex="0" role="columnheader button">Elemento
         </th></tr></thead><tbody>
         <tr>
         <td><a href="/wiki/Arlan" title="Arlan"><img alt="Character Arlan Icon" src="/Site_Honkai/Art_splash/Character_Arlan_Splash_Art.png" class=" lazyloaded"></a>
