--- a/Revenda/index.html
+++ b/Revenda/index.html
@@ -185,7 +185,27 @@
         </div>
     </section>
     <section id="formulario">
-        
+        <div class="container">
+            <h2>Entre em contato:</h2>
+            <form>
+                <div>
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div>
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" id="telefone">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="text" id="email">
+                </div>
+                <div>
+                    <label for="veiculo">Veiculo:</label>
+                    <input type="text" id="veiculo">
+                </div>
+            </form>
+        </div>
     </section>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
