--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -529,9 +529,9 @@
             <tr>
             <td><a href="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_Pom-Pom_Portrait.png/revision/latest?cb=20211008120222" class="image"><img alt="NPC Pom-Pom Retrato" src="/Site_Honkai/Art_splash/NPC_Pom-Pom_Portrait.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Pom-Pom Portrait.png" data-image-key="NPC_Pom-Pom_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_Pom-Pom_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
             </td>
-            <td><a href="/wiki/Pom-Pom" title="Pom-Pom"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom</font></font></a>
+            <td><a href="/Site_Honkai/personagens/Pom_Pom.html" title="Pom-Pom"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom</font></font></a>
             </td>
-            <td><a href="/wiki/Astral_Express" title="Expresso Astral"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Expresso Astral</font></font></a>
+            <td><a href="/Site_Honkai/locais/expresso_astral.html" title="Expresso Astral"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Expresso Astral</font></font></a>
             </td>
             <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Condutor do Expresso Astral
             </font></font></td></tr>
